--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-<h1 style="text-align: center;">We moved to a new domain!</h1>
-<h3 style="text-align: center;">Please visit it here: <a href="https://mbms.me">mbms.me</a></h3>
+<!DOCTYPE html>
+<html>
+   <head>
+      <meta http-equiv = "refresh" content = "0"; url = "https://mbms.me" />
+   </head>
+</html>
